[project]
name = "bessplug"
version = "0.0.0"
description = "Plugin SDK for BESS"
authors = [{ name = "Shivang Sharma" }]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bessplug"]

[tool.setuptools.package-data]
bessplug = ["*.so"]

[tool.pyright]
reportMissingModuleSource = false
